--- a/report.Rmd
+++ b/report.Rmd
@@ -107,6 +107,8 @@ Bio dataset contains players' biographical data:
 
 Teams in NBA keep changing in these 15 years. Three teams change their team locations and team names thus we may find the teams are not necessarily the same each year. Players can be traded and signed during the season, which makes some players have more records than others in these datasets.
 
+Height data in `bio` dataset is saved as character,such as "6-8", which requires us to convert them to numeric.
+
 Also all data are saved as factor, which requires us to convert them to numeric or character.
 
 <br><br>
@@ -134,7 +136,7 @@ For `Players_bio` data, we join players' data and biographical data and turn the
 
 _Scroll down the table to see more details_
 ```{r warning=FALSE,message=FALSE}
-print(dfSummary(players_bio,headings = FALSE,plain.ascii = FALSE,valid.col = FALSE,graph.magnif = 0.75,style = "grid"),max.tbl.height = 500,method='render')
+print(dfSummary(Players_bio,headings = FALSE,plain.ascii = FALSE,valid.col = FALSE,graph.magnif = 0.75,style = "grid"),max.tbl.height = 500,method='render')
 ```
 
 
@@ -163,7 +165,7 @@ print(dfSummary(Team_shooting,headings = FALSE,plain.ascii = FALSE,valid.col = F
 As we can see in the aforementioned tables, there is no missing value in `Teams_splits` and `Team_shooting`. Also, since `Player` and `Players_bio` are similar to each other, we are going to display the missing values of `Players_bio` here.
 
 ```{r fig.align="center",fig.cap="Figure 1: Missing values"}
-visna(players_bio)
+visna(Players_bio)
 ```
 Figure 1 shows that the marjority of the data has no missing values.
 
@@ -393,3 +395,49 @@ Team_splits %>% select(year, ratioAST, pctWins) %>% group_by(year) %>%
 ```
 
 Assist Ratio is the percentage of a team's possessions that ends in an assist. The growth is obvious in recent three years and we can see there are teams pretty good at sharing balls these years and they all recieve outstanding grades.
+
+
+### Height/Weight Ratio
+```{r fig.align="center"}
+data <- Players_bio%>%
+  filter(Year>=2004)%>%
+  select(Player,height,weight,Year)%>%
+  distinct()%>%
+  drop_na()%>%
+  as.data.frame(stringsAsFactors = F)%>%
+  select(height,weight,Year)%>%
+  dplyr::group_by(Year)%>%
+  dplyr::summarise(avg_h=mean(height),avg_w=mean(weight))%>%
+  dplyr::ungroup()%>%
+  mutate(hw_ratio=avg_h/avg_w)%>%
+  select(Year,hw_ratio)
+
+
+ggplot()+
+  geom_line(aes(x=Year,y=hw_ratio),data=data,color="#C9082A",size=2)+
+  geom_point(aes(x=Year,y=hw_ratio),data=data,color="#C9082A",size=4)+
+  geom_point(aes(x=Year,y=hw_ratio),data=data,color="white",size=2)+
+  scale_x_continuous(breaks=seq(2004,2019))+
+  scale_y_continuous(labels = scales::percent_format(accuracy = 1))+
+  xlab('') +
+  ylab('') +
+  theme_minimal()+
+  ggtitle("Average Height/Weight Ratio Per Season")+
+  theme(plot.title = element_text(size=17.5,face="bold"),
+        axis.text.x = element_text(angle = 45, hjust = 1,color = "#000000", size = 10),
+        axis.text.y = element_text(color = "#000000", size = 10))
+```
+
+
+
+## VI. Interactive Plot
+***
+
+<br><br>
+
+## VII. Conclusion
+***
+
+
+
+<br><br>
